src/components/lancer/MechState/MechCentralDiamond.scss
@import '../../../fonts';

$grid_count: 8;

@mixin big_icons {
  .ticks-container button.tick .asset {
    width: 20px; height: 20px;
    transform: rotate(45deg);
  }
}

.MechCentralDiamond {
  width: 220px;
  height: 220px;

  background-color: $parchment_dark;
  background-size: 152px;

  display: flex;
  justify-content: center;
  align-items: center;

  margin: auto;
  transform: rotate(-46deg); // I don't know why 45 deg is slightly off-kilter
  z-index: 5;

  @include max_width {
    // position: absolute;
    // left: 50%;
    // top: 54px;
    // transform: translateX(-50%) rotate(-45deg);
    // z-index: 5;
  }

  @include below_max_width {
    // transform: rotate(-45deg);
    // margin: 30px auto;
  }

  .relative-container {
    position: relative;
    width: 100%;
    height: 100%;

    border: 4px solid $rust_dark;
    // border-right-color: $grey_very_dark;
    // border-bottom-color: $grey_very_dark;
    // border-left-color: $grey_very_dark;

    > * { transition: opacity .2s .4s, z-index .2s .4s; }

    &:hover {
      > * { transition: opacity .2s .2s, z-index .2s .2s; }

      .portrait-container {
        opacity: 0.05;
        z-index: -30;
      }

      .buttons-container {
        opacity: 1.0;
      }
    }

    .portrait-container {
      position: absolute;
      left: 50%;
      top: 50%;

      box-sizing: border-box;
			width: 100%;
			height: 100%;
			clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
      transform: translate(-50%, -50%);

      z-index: 10;
      opacity: 1.0;
      pointer-events: none;

      .portrait {
        box-sizing: border-box;
        width: 100%;
        height: 100%;
        object-fit: contain;
        background-size: contain;
        background-repeat: no-repeat;
        image-rendering: crisp-edges;
        image-rendering: pixelated;

        transform: rotate(45deg) scale(143%);
      }
    }


    .buttons-container {
      display: grid;
      grid-template-columns: repeat($grid_count, 1fr);
      grid-template-rows: repeat($grid_count, 1fr);

      padding: 6px;
      height: 100%;
      box-sizing: border-box;

      opacity: .2;

      .MechNumberBar {
        background-color: $rust;


        &.structure {
          @include big_icons;
          grid-column: 1 / span $grid_count;
          grid-row: 1 / span 1;
          justify-content: flex-start;
        }

        &.stress {
          @include big_icons;
          grid-column: 1 / span $grid_count;
          grid-row: $grid_count / span 1;
          justify-content: flex-end;
        }

        .number { transform: rotate(45deg); }
      }

      button.mini-label {
        @include text_monospace;
        display: flex;

        &:hover {
          background-color: $rust;
          color: white;
        }

        &.structure {
          grid-column: 1 / span $grid_count;
          grid-row: 2 / span 2;
          align-items: flex-start;
          justify-content: flex-end;
        }

        &.stress {
          grid-column: 1 / span $grid_count;
          grid-row: -4 / span 2;
          align-items: flex-end;
        }

        .label {
          display: flex;
          flex-direction: column;
          align-items: flex-end;
          font-size: 18px;
          margin: 6px 0;

          .reminder-text {
            font-size: 12px;
          }
        }

        .number {
          margin: 0 12px;
          font-size: 38px;
          transform: rotate(45deg);
        }
      }


      .repairs-container-container {
        // display: none;
        grid-column: 1 / span $grid_count;
        grid-row: 4 / span 2;

        .repairs-container {
          display: flex;
          flex-direction: column;
          flex-wrap: wrap;
          justify-content: flex-end;
          margin-top: -10px;
          height: 70px;
          width: fit-content;

          &.small-repairs {
            height: 100%;
            button { width: 24px; height: 24px; }
          }

          button {
            padding: 0;
            width: 34px;
            height: 34px;

            &:hover {
              // turns black to $rust
              filter: invert(19%) sepia(35%) saturate(2526%) hue-rotate(342deg) brightness(89%) contrast(96%);
            }

            &.used {
              opacity: .3;
            }

            .asset {
              width: 100%;
              height: 100%;;
              transform: rotate(45deg);

              // black to $mud
              filter: invert(46%) sepia(21%) saturate(394%) hue-rotate(359deg) brightness(89%) contrast(82%);
              // filter: invert(20%);
            }
          }
        }
      }


      .size-container {
        grid-column: -3 / span 2;
        grid-row: 4 / span 2;
        display: flex;
        justify-content: center;
        align-items: center;
        width: 100%;
        height: 100%;

        display: none;

        .mech-size.asset {
          width: 90%;
          height: 90%;
          transform: rotate(45deg);

          // black to $mud
          // filter: invert(46%) sepia(21%) saturate(394%) hue-rotate(359deg) brightness(89%) contrast(82%);
          filter: invert(20%);

        }
      }
    }
  }
}

